fix wrap md ul mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,6 +306,7 @@ footer p {
 .md ul {
   display: flex;
   align-items: center;
+  flex-flow: wrap;
   list-style: none;
 }
 
